⬆️ Upgrade openapi-generator
