# rika-firenet-openapi/src/apis/stoves_api.rs
@@ -4,44 +4,18 @@
  * Rika Firenet API operations
  *
  * The version of the OpenAPI document: 1.0.0
- * 
+ *
  * Generated by: https://openapi-generator.tech
  */
 
-
 use reqwest;
 
+use super::{configuration, Error};
 use crate::apis::ResponseContent;
-use super::{Error, configuration};
-
-/// struct for passing parameters to the method [`list_stoves`]
-#[derive(Clone, Debug, Default)]
-pub struct ListStovesParams {
-    /// Session cookie
-    pub connect_period_sid: String
-}
-
-/// struct for passing parameters to the method [`login`]
-#[derive(Clone, Debug, Default)]
-pub struct LoginParams {
-    /// Rika Firenet account email
-    pub email: String,
-    /// Rika Firenet password
-    pub password: String
-}
-
-/// struct for passing parameters to the method [`logout`]
-#[derive(Clone, Debug, Default)]
-pub struct LogoutParams {
-    /// Session cookie
-    pub connect_period_sid: String
-}
 
 /// struct for passing parameters to the method [`stove_controls`]
-#[derive(Clone, Debug, Default)]
+#[derive(Clone, Debug)]
 pub struct StoveControlsParams {
-    /// Session cookie
-    pub connect_period_sid: String,
     /// Stove identifier
     pub stove_id: String,
     pub room_power_request: Option<i32>,
@@ -81,37 +55,20 @@ pub struct StoveControlsParams {
     pub revision: Option<i32>,
     pub set_back_temperature: Option<String>,
     pub target_temperature: Option<String>,
-    pub temperature_offset: Option<String>
+    pub temperature_offset: Option<String>,
 }
 
 /// struct for passing parameters to the method [`stove_status`]
-#[derive(Clone, Debug, Default)]
+#[derive(Clone, Debug)]
 pub struct StoveStatusParams {
-    /// Session cookie
-    pub connect_period_sid: String,
     /// Stove identifier
-    pub stove_id: String
+    pub stove_id: String,
 }
-
 
 /// struct for typed errors of method [`list_stoves`]
 #[derive(Debug, Clone, Serialize, Deserialize)]
 #[serde(untagged)]
 pub enum ListStovesError {
-    UnknownValue(serde_json::Value),
-}
-
-/// struct for typed errors of method [`login`]
-#[derive(Debug, Clone, Serialize, Deserialize)]
-#[serde(untagged)]
-pub enum LoginError {
-    UnknownValue(serde_json::Value),
-}
-
-/// struct for typed errors of method [`logout`]
-#[derive(Debug, Clone, Serialize, Deserialize)]
-#[serde(untagged)]
-pub enum LogoutError {
     UnknownValue(serde_json::Value),
 }
 
@@ -127,24 +84,27 @@ pub enum StoveControlsError {
 #[derive(Debug, Clone, Serialize, Deserialize)]
 #[serde(untagged)]
 pub enum StoveStatusError {
+    Status401(String),
+    Status500(String),
     UnknownValue(serde_json::Value),
 }
 
-
-pub async fn list_stoves(configuration: &configuration::Configuration, params: ListStovesParams) -> Result<String, Error<ListStovesError>> {
+pub async fn list_stoves(
+    configuration: &configuration::Configuration,
+) -> Result<String, Error<ListStovesError>> {
     let local_var_configuration = configuration;
 
     // unbox the parameters
-    let _connect_period_sid = params.connect_period_sid;
-
 
     let local_var_client = &local_var_configuration.client;
 
     let local_var_uri_str = format!("{}/web/summary", local_var_configuration.base_path);
-    let mut local_var_req_builder = local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
+    let mut local_var_req_builder =
+        local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
 
     if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
-        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+        local_var_req_builder =
+            local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
     }
 
     let local_var_req = local_var_req_builder.build()?;
@@ -156,84 +116,24 @@ pub async fn list_stoves(configuration: &configuration::Configuration, params: L
     if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
         Ok(local_var_content)
     } else {
-        let local_var_entity: Option<ListStovesError> = serde_json::from_str(&local_var_content).ok();
-        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        let local_var_entity: Option<ListStovesError> =
+            serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent {
+            status: local_var_status,
+            content: local_var_content,
+            entity: local_var_entity,
+        };
         Err(Error::ResponseError(local_var_error))
     }
 }
 
-pub async fn login(configuration: &configuration::Configuration, params: LoginParams) -> Result<(), Error<LoginError>> {
+pub async fn stove_controls(
+    configuration: &configuration::Configuration,
+    params: StoveControlsParams,
+) -> Result<(), Error<StoveControlsError>> {
     let local_var_configuration = configuration;
 
     // unbox the parameters
-    let email = params.email;
-    let password = params.password;
-
-
-    let local_var_client = &local_var_configuration.client;
-
-    let local_var_uri_str = format!("{}/web/login", local_var_configuration.base_path);
-    let mut local_var_req_builder = local_var_client.request(reqwest::Method::POST, local_var_uri_str.as_str());
-
-    if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
-        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
-    }
-    let mut local_var_form_params = std::collections::HashMap::new();
-    local_var_form_params.insert("email", email.to_string());
-    local_var_form_params.insert("password", password.to_string());
-    local_var_req_builder = local_var_req_builder.form(&local_var_form_params);
-
-    let local_var_req = local_var_req_builder.build()?;
-    let local_var_resp = local_var_client.execute(local_var_req).await?;
-
-    let local_var_status = local_var_resp.status();
-    let local_var_content = local_var_resp.text().await?;
-
-    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
-        Ok(())
-    } else {
-        let local_var_entity: Option<LoginError> = serde_json::from_str(&local_var_content).ok();
-        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
-        Err(Error::ResponseError(local_var_error))
-    }
-}
-
-pub async fn logout(configuration: &configuration::Configuration, params: LogoutParams) -> Result<(), Error<LogoutError>> {
-    let local_var_configuration = configuration;
-
-    // unbox the parameters
-    let _connect_period_sid = params.connect_period_sid;
-
-
-    let local_var_client = &local_var_configuration.client;
-
-    let local_var_uri_str = format!("{}/web/logout", local_var_configuration.base_path);
-    let mut local_var_req_builder = local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
-
-    if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
-        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
-    }
-
-    let local_var_req = local_var_req_builder.build()?;
-    let local_var_resp = local_var_client.execute(local_var_req).await?;
-
-    let local_var_status = local_var_resp.status();
-    let local_var_content = local_var_resp.text().await?;
-
-    if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
-        Ok(())
-    } else {
-        let local_var_entity: Option<LogoutError> = serde_json::from_str(&local_var_content).ok();
-        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
-        Err(Error::ResponseError(local_var_error))
-    }
-}
-
-pub async fn stove_controls(configuration: &configuration::Configuration, params: StoveControlsParams) -> Result<(), Error<StoveControlsError>> {
-    let local_var_configuration = configuration;
-
-    // unbox the parameters
-    let _connect_period_sid = params.connect_period_sid;
     let stove_id = params.stove_id;
     let room_power_request = params.room_power_request;
     let bake_temperature = params.bake_temperature;
@@ -274,14 +174,19 @@ pub async fn stove_controls(configuration: &configuration::Configuration, params
     let target_temperature = params.target_temperature;
     let temperature_offset = params.temperature_offset;
 
-
     let local_var_client = &local_var_configuration.client;
 
-    let local_var_uri_str = format!("{}/api/client/{stoveId}/controls", local_var_configuration.base_path, stoveId=crate::apis::urlencode(stove_id));
-    let mut local_var_req_builder = local_var_client.request(reqwest::Method::POST, local_var_uri_str.as_str());
+    let local_var_uri_str = format!(
+        "{}/api/client/{stoveId}/controls",
+        local_var_configuration.base_path,
+        stoveId = crate::apis::urlencode(stove_id)
+    );
+    let mut local_var_req_builder =
+        local_var_client.request(reqwest::Method::POST, local_var_uri_str.as_str());
 
     if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
-        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+        local_var_req_builder =
+            local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
     }
     let mut local_var_form_params = std::collections::HashMap::new();
     if let Some(local_var_param_value) = room_power_request {
@@ -330,7 +235,10 @@ pub async fn stove_controls(configuration: &configuration::Configuration, params
         local_var_form_params.insert("frostProtectionActive", local_var_param_value.to_string());
     }
     if let Some(local_var_param_value) = frost_protection_temperature {
-        local_var_form_params.insert("frostProtectionTemperature", local_var_param_value.to_string());
+        local_var_form_params.insert(
+            "frostProtectionTemperature",
+            local_var_param_value.to_string(),
+        );
     }
     if let Some(local_var_param_value) = heating_power {
         local_var_form_params.insert("heatingPower", local_var_param_value.to_string());
@@ -378,7 +286,10 @@ pub async fn stove_controls(configuration: &configuration::Configuration, params
         local_var_form_params.insert("heatingTimeWed2", local_var_param_value.to_string());
     }
     if let Some(local_var_param_value) = heating_times_active_for_comfort {
-        local_var_form_params.insert("heatingTimesActiveForComfort", local_var_param_value.to_string());
+        local_var_form_params.insert(
+            "heatingTimesActiveForComfort",
+            local_var_param_value.to_string(),
+        );
     }
     if let Some(local_var_param_value) = on_off {
         local_var_form_params.insert("onOff", local_var_param_value.to_string());
@@ -409,27 +320,39 @@ pub async fn stove_controls(configuration: &configuration::Configuration, params
     if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
         Ok(())
     } else {
-        let local_var_entity: Option<StoveControlsError> = serde_json::from_str(&local_var_content).ok();
-        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        let local_var_entity: Option<StoveControlsError> =
+            serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent {
+            status: local_var_status,
+            content: local_var_content,
+            entity: local_var_entity,
+        };
         Err(Error::ResponseError(local_var_error))
     }
 }
 
-pub async fn stove_status(configuration: &configuration::Configuration, params: StoveStatusParams) -> Result<crate::models::StoveStatus, Error<StoveStatusError>> {
+pub async fn stove_status(
+    configuration: &configuration::Configuration,
+    params: StoveStatusParams,
+) -> Result<crate::models::StoveStatus, Error<StoveStatusError>> {
     let local_var_configuration = configuration;
 
     // unbox the parameters
-    let _connect_period_sid = params.connect_period_sid;
     let stove_id = params.stove_id;
-
 
     let local_var_client = &local_var_configuration.client;
 
-    let local_var_uri_str = format!("{}/api/client/{stoveId}/status", local_var_configuration.base_path, stoveId=crate::apis::urlencode(stove_id));
-    let mut local_var_req_builder = local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
+    let local_var_uri_str = format!(
+        "{}/api/client/{stoveId}/status",
+        local_var_configuration.base_path,
+        stoveId = crate::apis::urlencode(stove_id)
+    );
+    let mut local_var_req_builder =
+        local_var_client.request(reqwest::Method::GET, local_var_uri_str.as_str());
 
     if let Some(ref local_var_user_agent) = local_var_configuration.user_agent {
-        local_var_req_builder = local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
+        local_var_req_builder =
+            local_var_req_builder.header(reqwest::header::USER_AGENT, local_var_user_agent.clone());
     }
 
     let local_var_req = local_var_req_builder.build()?;
@@ -441,9 +364,13 @@ pub async fn stove_status(configuration: &configuration::Configuration, params: 
     if !local_var_status.is_client_error() && !local_var_status.is_server_error() {
         serde_json::from_str(&local_var_content).map_err(Error::from)
     } else {
-        let local_var_entity: Option<StoveStatusError> = serde_json::from_str(&local_var_content).ok();
-        let local_var_error = ResponseContent { status: local_var_status, content: local_var_content, entity: local_var_entity };
+        let local_var_entity: Option<StoveStatusError> =
+            serde_json::from_str(&local_var_content).ok();
+        let local_var_error = ResponseContent {
+            status: local_var_status,
+            content: local_var_content,
+            entity: local_var_entity,
+        };
         Err(Error::ResponseError(local_var_error))
     }
 }
-
