# rika-firenet-openapi/src/models/stove_status.rs
@@ -4,14 +4,11 @@
  * Rika Firenet API operations
  *
  * The version of the OpenAPI document: 1.0.0
- * 
+ *
  * Generated by: https://openapi-generator.tech
  */
 
-
-
-
-#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+#[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
 pub struct StoveStatus {
     /// Stove identifier
     #[serde(rename = "stoveID")]
@@ -38,7 +35,17 @@ pub struct StoveStatus {
 }
 
 impl StoveStatus {
-    pub fn new(stove_id: String, name: String, oem: String, stove_type: String, last_confirmed_revision: i32, last_seen_minutes: i32, controls: crate::models::StoveControls, sensors: crate::models::StoveSensors, stove_features: crate::models::StoveFeatures) -> StoveStatus {
+    pub fn new(
+        stove_id: String,
+        name: String,
+        oem: String,
+        stove_type: String,
+        last_confirmed_revision: i32,
+        last_seen_minutes: i32,
+        controls: crate::models::StoveControls,
+        sensors: crate::models::StoveSensors,
+        stove_features: crate::models::StoveFeatures,
+    ) -> StoveStatus {
         StoveStatus {
             stove_id,
             name,
@@ -52,5 +59,3 @@ impl StoveStatus {
         }
     }
 }
-
-
